--- a/Frontend/InventoryToolProject/InventoryTool.UI/InventoryTool.UI.csproj
+++ b/Frontend/InventoryToolProject/InventoryTool.UI/InventoryTool.UI.csproj
@@ -267,6 +267,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Account\OTP.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
