--- a/Frontend/InventoryToolProject/InventoryTool.API/InventoryTool.API.csproj
+++ b/Frontend/InventoryToolProject/InventoryTool.API/InventoryTool.API.csproj
@@ -79,6 +79,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -317,6 +318,12 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InventoryTool.Model\InventoryTool.Model.csproj">
+      <Project>{5210ef03-c08e-4d29-a014-3b87498d039a}</Project>
+      <Name>InventoryTool.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
