--- a/Frontend/InventoryToolProject/InventoryTool.API/Web.config
+++ b/Frontend/InventoryToolProject/InventoryTool.API/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-InventoryTool.API-20170110034753.mdf;Initial Catalog=aspnet-InventoryTool.API-20170110034753;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=InventoryToolDB;User ID=sa;Password=shiv;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
