--- a/Frontend/InventoryToolProject/InventoryTool.Model/InventoryTool.Model.csproj
+++ b/Frontend/InventoryToolProject/InventoryTool.Model/InventoryTool.Model.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetAllProduct_Result.cs">
+      <DependentUpon>InventoryToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="InventoryToolModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -66,6 +69,7 @@
       <DependentUpon>InventoryToolModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserResultModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="InventoryToolModel.Context.tt">
