--- a/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
+++ b/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserResultModel.cs" />
+    <Compile Include="VMPart.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="InventoryToolModel.Context.tt">
