--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--Dev/Test connection string-->
-    <add name="DefaultConnection" connectionString="Data Source=.;initial catalog=Budget;user id=sa;password=shiv;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
-
+    
     <!--PPE Connection string-->
     <!--<add name="DefaultConnection" connectionString="Data Source=ETSRV;initial catalog=Budget;user id=hybridlmx;password=Project@2016;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
 
@@ -36,6 +35,8 @@
 
     <!--LOCAL1 Instance execution WEBCONFIG start-->
     <add key="ApiUri" value="http://localhost:20654/" />
+    <!--<add key="ApiUri" value="http://inventorytoolapi.azurewebsites.net/" />-->
+    
     <add key="ida:ClientId" value="826c0367-6227-4c5d-9af8-c0eada75f039" />
     <add key="ida:AppKey" value="/3daO4GMqhBxQJof+6aRIWHd9S8gx4OinUWsMn3EJzU=" />
     <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/" />
