--- a/Frontend/InventoryTool/InventoryTool.API/InventoryTool.API.csproj
+++ b/Frontend/InventoryTool/InventoryTool.API/InventoryTool.API.csproj
@@ -193,6 +193,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\LookupController.cs" />
+    <Compile Include="Controllers\PartStockController.cs" />
     <Compile Include="Controllers\PartController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Filters\ProcessException.cs" />
