--- a/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
+++ b/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
@@ -105,7 +105,11 @@
       <DependentUpon>InventoryToolModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TX_Part_Stock.cs">
+      <DependentUpon>InventoryToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="UserResultModel.cs" />
+    <Compile Include="VMPartStock.cs" />
     <Compile Include="VMPart.cs" />
   </ItemGroup>
   <ItemGroup>
