--- a/Frontend/InventoryTool/InventoryTool.UI.Proxy/InventoryTool.UI.Proxy.csproj
+++ b/Frontend/InventoryTool/InventoryTool.UI.Proxy/InventoryTool.UI.Proxy.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LookupProxy.cs" />
+    <Compile Include="PartStockProxy.cs" />
     <Compile Include="PartProxy.cs" />
     <Compile Include="ProductProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
