--- a/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
+++ b/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
@@ -257,6 +257,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\PartController.cs" />
+    <Compile Include="Controllers\PartStockController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="ErrorHandler\AiHandleErrorAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -652,9 +653,11 @@
     <Content Include="Views\Product\_ProductList.cshtml" />
     <Content Include="Views\Part\PartIndex.cshtml" />
     <Content Include="Views\Part\_PartList.cshtml" />
+    <Content Include="Views\PartStock\PartStockIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\PartStock\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
