--- a/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
+++ b/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
@@ -69,6 +69,9 @@
     <Compile Include="GetAllUnit_Result.cs">
       <DependentUpon>InventoryToolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="GetPartByFilter_Result.cs">
+      <DependentUpon>InventoryToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="LokkupModel.cs" />
     <Compile Include="GetAllCategory_Result.cs">
       <DependentUpon>InventoryToolModel.tt</DependentUpon>
