--- a/Frontend/InventoryTool/InventoryTool.API/InventoryTool.API.csproj
+++ b/Frontend/InventoryTool/InventoryTool.API/InventoryTool.API.csproj
@@ -192,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Controllers\LookupController.cs" />
     <Compile Include="Controllers\PartStockController.cs" />
