--- a/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
+++ b/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
@@ -661,12 +661,6 @@
     <Content Include="Views\PartStock\_FilterPanel.cshtml" />
     <Content Include="Views\PartStock\_FilterList.cshtml" />
     <Content Include="Views\PartStock\_StockEntry.cshtml" />
-    <Content Include="Views\Customer\_CustomerList.cshtml" />
-    <Content Include="Views\Customer\CustomerIndex.cshtml" />
-    <Content Include="Views\Supplier\_SupplierList.cshtml" />
-    <Content Include="Views\Supplier\SupplierIndex.cshtml" />
-    <Content Include="Views\Customer\_AddCustomer.cshtml" />
-    <Content Include="Views\Supplier\_AddSupplier.cshtml" />
     <Content Include="Views\Report\ReportIndex.cshtml" />
     <Content Include="Views\Report\_MinBalanceReport.cshtml" />
   </ItemGroup>
@@ -674,6 +668,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\PartStock\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Customer\" />
+    <Folder Include="Views\Supplier\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
