--- a/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
+++ b/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\RoleHelper.cs" />
     <Compile Include="Helper\ViewHelper.cs" />
     <Compile Include="Models\AdalTokenCache.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
