--- a/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
+++ b/Frontend/InventoryTool/InventoryTool.UI/InventoryTool.UI.csproj
@@ -275,7 +275,7 @@
     <Compile Include="Helper\ConfigExtension.cs" />
     <Compile Include="Helper\GlobalEnam.cs" />
     <Compile Include="Helper\HttpUtilityHelper.cs" />
-    <Compile Include="Helper\UserExtended.cs" />
+    <Compile Include="Helper\UserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UserMessage.Designer.cs">
@@ -660,7 +660,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\AzureAD\ConnectedService.json" />
     <Content Include="Views\Shared\UnAuthorize.cshtml" />
-    <Content Include="Views\Common\NoAccessPermission.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\Product\ProductIndex.cshtml" />
     <Content Include="Views\Product\_ProductList.cshtml" />
@@ -677,6 +676,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\PartStock\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
