--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -9,8 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--Dev/Test connection string-->
-    
+    <!--Dev/Test connection string-->   
+        <add name="InventoryToolDB"
+          connectionString="Server=.; Database=InventoryToolDB ; Integrated Security=True"             
+          providerName="System.Data.SqlClient" />
+
+
+
+
     <!--PPE Connection string-->
     <!--<add name="DefaultConnection" connectionString="Data Source=ETSRV;initial catalog=Budget;user id=hybridlmx;password=Project@2016;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
 
@@ -30,8 +36,8 @@
     <add key="ApiUri" value="http://localhost:20654/" />
     <!--<add key="ApiUri" value="http://inventorytoolapi.azurewebsites.net/" />-->
     <add key="iKey" value="dfd3ae4e-7b5a-4315-a876-435cde0c704b" />
-  
-  
+    <add key="ClientId" value="49225084458-ob9vlu6n6gkgp1p1tpbmn1bps8k20d25.apps.googleusercontent.com" />
+    <add key="ClientSecret" value="8RnZ7XC7oupC8h6sDyJ2aYZf" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -64,10 +70,10 @@
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
-      <dependentAssembly>
+      <!--<dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-      </dependentAssembly>
+      </dependentAssembly>-->
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
