--- a/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
+++ b/Frontend/InventoryTool/InventoryTool.Model/InventoryTool.Model.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountViewModels.cs" />
     <Compile Include="GetAllCriticality_Result.cs">
       <DependentUpon>InventoryToolModel.tt</DependentUpon>
     </Compile>
