add azure connection in web. config

--- a/Frontend/InventoryTool/InventoryTool.API/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.API/Web.config
@@ -14,10 +14,9 @@
     <add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=InventoryToolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--End-->
 
-    <!--Connection string for Test. backend server and azure connection-->
-    <!--Start-->
-    <!--<add name="BudgetEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WDGToolAzDev01;initial catalog=Budget;User ID=hybridlmx;Password=Project@2016;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--End-->    
+    <!--Connection string for Production->
+    <!--<add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mayankazure.database.windows.net;initial catalog=InventoryToolDB;User ID=mayank_on24;Password=India@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
