--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -21,7 +21,9 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=ETSRV;initial catalog=Budget;user id=hybridlmx;password=Project@2016;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
 
     <!--Production Connection String-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=LMXSQL01;initial catalog=Budget;user id=hybridlmx;password=Project@2016;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="InventoryToolDB"
+          connectionString="Server=mayankazure.database.windows.net; Database=InventoryToolDB ; User ID=mayank_on24;Password=India@123"
+          providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
