update web config

--- a/Frontend/InventoryTool/InventoryTool.API/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.API/Web.config
@@ -10,11 +10,10 @@
   </configSections>
   <connectionStrings>
     <!--Connection string for Dev. backend server and azure connection-->
-    <!--Start-->
     <add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=InventoryToolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--End-->
 
-    <!--Connection string for Production->
+
+    <!--Connection string for Production-->
     <!--<add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mayankazure.database.windows.net;initial catalog=InventoryToolDB;User ID=mayank_on24;Password=India@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
   </connectionStrings>
