--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -34,7 +34,7 @@
     <!--LOCAL1 Instance execution WEBCONFIG start-->
     <add key="ApiUri" value="http://localhost:20654/" />
     <!--<add key="ApiUri" value="http://inventorytoolapi.azurewebsites.net/" />-->
-    <add key="iKey" value="dfd3ae4e-7b5a-4315-a876-435cde0c704b" />
+    <!--<add key="iKey" value="dfd3ae4e-7b5a-4315-a876-435cde0c704b" />-->
     <add key="ClientId" value="49225084458-ob9vlu6n6gkgp1p1tpbmn1bps8k20d25.apps.googleusercontent.com" />
     <add key="ClientSecret" value="8RnZ7XC7oupC8h6sDyJ2aYZf" />
   </appSettings>
