update deployment code

--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -10,16 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--Dev/Test connection string-->   
-        <add name="InventoryToolDB"
-          connectionString="Server=.; Database=InventoryToolDB ; Integrated Security=True"             
-          providerName="System.Data.SqlClient" />
-
-
-
-
-    <!--PPE Connection string-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=ETSRV;initial catalog=Budget;user id=hybridlmx;password=Project@2016;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
-
+        <add name="InventoryToolDB" connectionString="Server=.; Database=InventoryToolDB ; Integrated Security=True" providerName="System.Data.SqlClient" />
+   
     <!--Production Connection String-->
     <!--<add name="InventoryToolDB"
           connectionString="Server=mayankazure.database.windows.net; Database=InventoryToolDB ; User ID=mayank_on24;Password=India@123"
