--- a/Frontend/InventoryTool/InventoryTool.Provider/App.config
+++ b/Frontend/InventoryTool/InventoryTool.Provider/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=InventoryToolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InventoryToolDBEntities" connectionString="metadata=res://*/InventoryToolModel.csdl|res://*/InventoryToolModel.ssdl|res://*/InventoryToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=InventoryToolDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
