--- a/Frontend/InventoryTool/InventoryTool.UI/Web.config
+++ b/Frontend/InventoryTool/InventoryTool.UI/Web.config
@@ -11,11 +11,8 @@
   <connectionStrings>
     <!--Dev/Test connection string-->   
         <add name="InventoryToolDB" connectionString="Server=.; Database=InventoryToolDB ; Integrated Security=True" providerName="System.Data.SqlClient" />
-   
     <!--Production Connection String-->
-    <!--<add name="InventoryToolDB"
-          connectionString="Server=mayankazure.database.windows.net; Database=InventoryToolDB ; User ID=mayank_on24;Password=India@123"
-          providerName="System.Data.SqlClient" />-->
+        <!--<add name="InventoryToolDB" connectionString="Server=mayankazure.database.windows.net; Database=InventoryToolDB ; User ID=mayank_on24;Password=India@123" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
